--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,40 +1,28 @@
 [package]
 name = "wascap"
-version = "0.5.2"
-authors = ["Kevin Hoffman <alothien@gmail.com>"]
+version = "0.6.0"
+authors = ["wasmCloud Team"]
 edition = "2018"
 description = "Wascap - WebAssembly Standard Capabilities. Library for extracting, embedding, and validating claims"
 license = "Apache-2.0"
-homepage = "https://github.com/wascc"
+homepage = "https://wasmcloud.com"
 documentation = "https://docs.rs/wascap"
 readme = "README.md"
 keywords = ["jwt", "crypto", "ed25519", "security", "webassembly"]
 categories = ["cryptography", "authentication", "wasm"]
 
-[features]
-cli = ["quicli", "structopt", "term-table", "exitfailure"]
-
-[[bin]]
-name = "wascap"
-required-features = ["cli"]
-
 [dependencies]
-log = "0.4.13"
+log = "0.4.14"
 env_logger = "0.8.2"
-serde_derive = "1.0.120"
-serde = "1.0.120"
-nkeys = "0.0.12"
+serde_derive = "1.0.123"
+serde = "1.0.123"
+nkeys = "0.1.0"
 base64 = "0.13.0"
 serde_json = "1.0.61"
-nuid = "0.2.1"
+nuid = "0.3.0"
 parity-wasm = "0.42.1"
 lazy_static = "1.4.0"
-ring = "0.16.19"
-data-encoding = "2.3.1"
-chrono-humanize = "0.1.1"
+ring = "0.16.20"
+data-encoding = "2.3.2"
+chrono-humanize = "0.1.2"
 chrono = "0.4.19"
-
-quicli = { version = "0.4", optional = true }
-structopt = { version = "0.3.21", optional = true }
-term-table = { version = "1.3.0", optional = true }
-exitfailure = { version = "0.5.1", optional =true }
