--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wascap"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["wasmCloud Team"]
 edition = "2018"
 description = "Wascap - wasmCloud Capabilities. Library for extracting, embedding, and validating claims"
@@ -13,7 +13,7 @@ categories = ["cryptography", "authentication", "wasm"]
 
 [dependencies]
 log = "0.4.14"
-env_logger = "0.9.3"
+env_logger = "0.10.0"
 serde_derive = "1.0.123"
 serde = "1.0.123"
 nkeys = "0.2.0"
@@ -22,8 +22,9 @@ serde_json = "1.0.61"
 nuid = "0.4.1"
 wasmparser = "0.94.0"
 wasm-gen = "0.1.4"
-wasm-encoder = "0.19.1"
+wasm-encoder = "0.20.0"
 lazy_static = "1.4.0"
 ring = "0.16.20"
 data-encoding = "2.3.2"
 humantime = "2.1"
+walrus = "0.19.0"
